ChangeLog

1.13

- bluray_info: add option to filter by language, -N <lang>

1.12

- bluray_info: add option to display 'duplicate' titles that would
  normally be filtered by libbluray. See bug #11
- bluray_copy: also add option to select from duplicate titles

1.11

- Fix configure script so it can build without libmpv (see
  Gentoo bug #907865)

1.10

bluray_info:
- Fix JSON output when limiting tracks (bug #13, thanks to zscholl
  for reporting)

bluray_copy:
- Display filename being written

1.9

- Fix not showing video format on 4K

1.8

- Make output more human-friendly
- Require libbluray >= 1.2.0 to fix 4K support
- Require libaacs

1.7

- Display milliseconds for timestamps and durations, (patch thanks to
  rapperskull)

1.6

- Display bluray chapter filesizes

1.5

- Add bluray_player, a small Blu-ray player using libmpv
- Add man pages
- Add support for 4K

bluray_info:

- Properly label DTS-HD Master audio streams
- Add displaying long audio and video codec names in JSON output
- Can narrow results on minimum number of seconds or minutes, has an audio or
  subtitle track
- Display chapter start times
- Can output chapters in OGM format for muxing into MKV
- Set disc title from Blu-ray disc metadata instead of UDF volume name

bluray_copy:

- General rewrite for readability and stability
- Fixed pulling in extra data between title start and first chapter
- Check for AACS decrypt errors
- Copy angle numbers

1.4

- Fix indexing to match Blu-ray spec for playlist numbers
- bluray_info: display main title even if one track is listed
- bluray_info: display subtitle character code
- bluray_copy: can now stream to stdout
- bluray_copy: print errors to stderr
- bluray_copy: increase default buffer sizes
- bluray_copy: increased buffer size for Blu-ray optical drives
- bluray_copy: don't require an output filename, use defaults if none given
- bluray_copy: optional quiet output to remove printing copy progress

1.3

- Add autotools

1.2.0